@@ -1839,13 +1839,18 @@ reserved and an 'implicit checkout mode if any file has an
 unreserved checkout."
   ;; We use this mechanism, because vc does not seem to refresh the state for
   ;; locking checkout models, yet for unreserved checkouts, the file's state
-  ;; might change from 'edited to 'needs-merge behind our back (when other
-  ;; users create new revisions because we don't have a reserved checkout).
+  ;; might change from 'edited to 'needs-merge behind our back (other users
+  ;; can create new revisions because we don't have a reserved checkout).
   ;;
   ;; NOTE: an implicit check-out model will cause vc-clearcase-state-heuristic
   ;; to be called every time we save the file, running up to two cleartool
   ;; commands to determine the state.  It would be much nicer if vc.el would
   ;; do a proper state recomputation when it runs `vc-next-action'.
+
+  ;; some vc code invokes this function with a single file arg
+  (unless (consp files)
+    (setq files (list files)))
+
   (catch 'checkout-model
     (dolist (file files)
       (let ((fprop (clearcase-file-fprop file)))
