@@ -1,3 +1,8 @@
+2011-02-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (vc-clearcase-checkout-model): accept both a
+	single file and a file set as an argument
+
 2011-02-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase-checkout-model): use an implicit
